--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="content">
       Do you want to enter?
       <br>
-      <a href="#" class="button">open</a>
+      <a href="enter.html" class="button">open</a>
     </div>
   </div>
 
