--- a/enter.html
+++ b/enter.html
@@ -53,7 +53,7 @@
     <div class="content">
       Record loaded.
       <br><br>
-      <a href="index.html" class="button">ok</a>
+      <a href="idle.html" class="button">open</a>
     </div>
   </div>
 
