--- a/idle.html
+++ b/idle.html
@@ -59,7 +59,7 @@
       You can stay here for a while.
       <br><br>
 
-      <a href="record.html" class="button">continue</a>
+      <a href="choice.html" class="button">continue</a>
     </div>
   </div>
 
