--- a/index.html
+++ b/index.html
@@ -1,61 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>System</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maira Alves Homepage</title>
+
   <style>
     body {
-      background: #f4f1ed;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    .window {
-      width: 420px;
-      margin: 120px auto;
-      background: #e6e6e6;
-      border: 1px solid #999;
-      box-shadow: 3px 3px 0 #bbb;
-    }
-    .titlebar {
-      background: #6f8fe8;
-      padding: 6px 8px;
-      display: flex;
-      justify-content: space-between;
-      font-weight: bold;
-    }
-    .content {
-      padding: 28px 20px;
+      background-image: url("https://www.transparenttextures.com/patterns/cloudy.png");
+      background-color: #9ec7e8;
+      font-family: "Times New Roman", serif;
+      color: #000;
       text-align: center;
     }
-    .button {
-      display: inline-block;
-      padding: 6px 22px;
-      background: #e6e6e6;
-      border-top: 2px solid #fff;
-      border-left: 2px solid #fff;
-      border-bottom: 2px solid #7a7a7a;
-      border-right: 2px solid #7a7a7a;
-      text-decoration: none;
-      color: #000;
-      font-size: 13px;
-      margin-top: 20px;
+
+    .container {
+      width: 760px;
+      margin: 40px auto;
+      background: #ffffff;
+      border: 3px double #000;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 32px;
+    }
+
+    .divider {
+      margin: 20px 0;
+    }
+
+    .marquee {
+      background: #000;
+      color: #00ffff;
+      padding: 6px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+    }
+
+    .box {
+      border: 2px solid #000;
+      padding: 12px;
+      margin: 20px;
+      text-align: left;
+      font-size: 14px;
+    }
+
+    a {
+      color: blue;
+      text-decoration: underline;
+      font-weight: bold;
+    }
+
+    a:hover {
+      color: red;
+    }
+
+    .footer {
+      font-size: 12px;
+      margin-top: 40px;
+      color: #333;
     }
   </style>
 </head>
+
 <body>
 
-  <div class="window">
-    <div class="titlebar">
-      <span>System</span>
-      <span>×</span>
+  <div class="marquee">
+    <marquee behavior="scroll" direction="left">
+      Welcome • This page is under construction • You can stay • Nothing is urgent
+    </marquee>
+  </div>
+
+  <div class="container">
+
+    <h1>Welcome to my homepage</h1>
+
+    <div class="divider">
+      <img src="https://media.giphy.com/media/l0HlNQ03J5JxX6lva/giphy.gif" width="120">
     </div>
-    <div class="content">
-      Do you want to enter?
-      <br>
-      <a href="enter.html" class="button">open</a>
+
+    <p>
+      Hello.<br>
+      This is not a service.<br>
+      This is not therapy.<br>
+      This is a place.
+    </p>
+
+    <div class="box">
+      <p>
+        You may explore slowly:
+      </p>
+
+      <ul>
+        <li><a href="idle.html">System Idle</a></li>
+        <li><a href="choice.html">What would help right now?</a></li>
+      </ul>
     </div>
+
+    <div class="divider">
+      <img src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif" width="80">
+    </div>
+
+    <p>
+      Last updated: never
+    </p>
+
+    <div class="footer">
+      © 1998–2026 • mairaalves.com • best viewed slowly
+    </div>
+
   </div>
 
 </body>
