--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h1>Welcome to my homepage</h1>
 
     <div class="divider">
-      <img src="https://media.giphy.com/media/l0HlNQ03J5JxX6lva/giphy.gif" width="120">
+      <img src="https://media.giphy.com/media/3o7btPCcdNniyf0ArS/giphy.gif" width="120" alt="Freud rotating">
     </div>
 
     <p>
