--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <h1>Welcome to my homepage</h1>
 
     <div class="divider">
-      <img src="https://media.giphy.com/media/3o7btPCcdNniyf0ArS/giphy.gif" width="120" alt="Freud rotating">
+      <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="120" alt="Freud head">
+      
     </div>
 
     <p>
