--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <h1>Welcome to my homepage</h1>
 
     <div class="divider">
-      <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="120" alt="Freud head">
+      assets/freud-tellmemore.gif
+
       
     </div>
 
