--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
     <h1>Welcome to my homepage</h1>
 
     <div class="divider">
-      assets/freud-tellmemore.gif
-
-      
+      <img src="assets/freud-tellmemore.gif" width="120" alt="Freud rotating">
     </div>
 
     <p>
@@ -115,3 +113,4 @@
 
 </body>
 </html>
+
