--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="marquee">
     <marquee behavior="scroll" direction="left">
-      Welcome • This page is under construction • You can stay • Nothing is urgent
+      Welcome • This page is under construction • You can stay • Talking therapy
     </marquee>
   </div>
 
