--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       Hello.<br>
       This is not a service.<br>
       This is not therapy.<br>
-      This is a place.
+      This is a safe place to talk about mental health.
     </p>
 
     <div class="box">
