--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
     <p>
       Hello.<br>
-      This is not a service.<br>
-      This is not therapy.<br>
-      This is a safe place to talk about mental health.
+      Hello, my name is Maira Alves<br>
+      I am a psychotherapist with an MSc in Early Intervention in Psychosis from King’s College London<br>
+      This is a space to think and talk about mental health
     </p>
 
     <div class="box">
