--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <p>
-      Hello.<br>
+      <br>
       Hello, my name is Maira Alves<br>
       I am a psychotherapist with an MSc in Early Intervention in Psychosis from King’s College London<br>
       This is a space to think and talk about mental health
@@ -92,8 +92,8 @@
       </p>
 
       <ul>
-        <li><a href="idle.html">System Idle</a></li>
-        <li><a href="choice.html">What would help right now?</a></li>
+        <li><a href="idle.html">system Idle</a></li>
+        <li><a href="choice.html">exploring</a></li>
       </ul>
     </div>
 
