--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <ul>
         <li><a href="idle.html">system Idle</a></li>
         <li><a href="choice.html">exploring</a></li>
-        <li><a href="blog/index.html">Notes</a></li>
+        <li><a href="notes.html">Notes</a></li>
       </ul>
     </div>
 
